--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 database.driver=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/tim1
-spring.datasource.username=EtfSI2016
-spring.datasource.password=2016SIEtf
+spring.datasource.url=http://www.phpmyadmin.co/db_structure.php?server=1&db=sql11180627
+spring.datasource.username=sql11180627
+spring.datasource.password=EgXKwAmYsc
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
