--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 database.driver=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://http://www.phpmyadmin.co:3306/sql11180627
+spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11180627
 spring.datasource.username=sql11180627
 spring.datasource.password=EgXKwAmYsc
 
